# actix-sqlx-api-practice

./: .env.default  Cargo.toml  README.md
migrations/: 20230303193911_create_initial_tables.down.sql  20230303193911_create_initial_tables.up.sql  20230322012819_make_users_phone_number_unique.down.sql  20230322012819_make_users_phone_number_unique.up.sql
src/: database.rs  main.rs
src/app/: user.rs
