[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "time" ] }
actix-web = "4"
dotenv = "0.15.0"
